# pyvs

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
app/: __init__.py  config.py
app/routes/: audio.py  chatterbox.py  history.py  profiles.py  stt.py  system.py  tts.py
app/services/: audio_utils.py  chatterbox_service.py  clearvoice_service.py  diarization_service.py  gpu_lock.py  gpu_service.py  ssml_parser.py  stt_service.py  tts_service.py  voice_similarity.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
docs/plans/: 2026-01-23-qwen-tts-enhancements.md  2026-01-23-qwen-tts-web-design.md  2026-02-10-systematic-fixes.md
