[project]
name = "pyvs"
version = "0.1.0"
description = "Python Voice Synthesis - TTS/STT web application with voice cloning and custom voices"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cryptography>=44.0.0",
    "faster-whisper>=1.2.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "noisereduce>=3.0.0",
    "numpy",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "qwen-tts>=0.0.5",
    "numba>=0.60.0",
    "nvidia-ml-py>=13.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
